# aoc-cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DownloadInputFiles.sh  GenerateChallenge.sh  GenerateSolution.sh  Make.sh  NewChallenge.sh  README.md  RunLinux.sh  aoc-cpp.cpp  aoc-cpp.h
Source/: CMakeLists.txt  Main.cpp
Source/Challenges/: CMakeLists.txt
Source/Challenges/Challenges/: Challenge.hpp  ChallengeIdentifier.hpp  Factory.cpp  Factory.hpp
Source/Challenges/Challenges/2018/: Challenge_2018_11.hpp
Source/Challenges/Challenges/2020/: Challenge_2020_11.hpp  Challenge_2020_12.hpp  Challenge_2020_13.hpp
Source/Challenges/Challenges/AutoGenerated/: ChallengeIncludes.inl  ChallengeRegistration.inl
Source/Challenges/Challenges/Year2018/: Challenge01.h  ChallengeFactory.h
Source/Challenges/Challenges/Year2021/: Challenge01.h  ChallengeFactory.h
Source/Challenges/Challenges/Year2022/: Challenge01.h  Challenge03.h  Challenge05.h  Challenge06.h  (+8 more)
Source/Tools/: CMakeLists.txt
Source/Tools/Tools/: Challenge.hpp  FileReader.cpp  FileReader.h  StringSplitter.h
source/: CMakeLists.txt  Main.cpp
source/challenges/: ChallengeAbstract.h  ChallengeFactory.h
source/challenges/2015/: Challenge01.h  Challenge02.h  Challenge03.h  Challenge04.h  Challenge05.h  Challenge06.h  Challenge07.h  Challenge08.h  Challenge09.h  Challenge10.h  Challenge11.h  Challenge12.h  Challenge13.h  Challenge14.h  Challenge15.h  Challenge16.h  Challenge17.h  Challenge18.h  Challenge19.h  Challenge20.h  Challenge21.h  Challenge22.h  Challenge23.h  Challenge24.h  Challenge25.h  Year2015.h
source/challenges/2016/: Challenge01.h  Challenge02.h  Challenge03.h  Challenge04.h  Challenge05.h  Challenge06.h  Challenge07.h  Challenge08.h  Challenge09.h  Challenge10.h  Challenge11.h  Challenge12.h  Challenge13.h  Challenge14.h  Challenge15.h  Challenge16.h  Challenge17.h  Challenge18.h  Challenge19.h  Challenge20.h  Challenge21.h  Challenge22.h  Challenge23.h  Challenge24.h  Challenge25.h  Year2016.h
source/challenges/2017/: Challenge01.h  Challenge02.h  Challenge03.h  Challenge04.h  Challenge05.h  Challenge06.h  Challenge07.h  Challenge08.h  Challenge09.h  Challenge10.h  Challenge11.h  Challenge12.h  Challenge13.h  Challenge14.h  Challenge15.h  Challenge16.h  Challenge17.h  Challenge18.h  Challenge19.h  Challenge20.h  Challenge21.h  Challenge22.h  Challenge23.h  Challenge24.h  Challenge25.h  Year2017.h
source/challenges/2018/: Challenge01.h  Challenge02.h  Challenge03.h  Challenge04.h  Challenge05.h  Challenge06.h  Challenge07.h  Challenge08.h  Challenge09.h  Challenge10.h  Challenge11.h  Challenge12.h  Challenge13.h  Challenge14.h  Challenge15.h  Challenge16.h  Challenge17.h  Challenge18.h  Challenge19.h  Challenge20.h  Challenge21.h  Challenge22.h  Challenge23.h  Challenge24.h  Challenge25.h  Year2018.h
source/challenges/2019/: Challenge01.h  Challenge02.h  Challenge03.h  Challenge04.h  Challenge05.h  Challenge06.h  Challenge07.h  Challenge08.h  Challenge09.h  Challenge10.h  Challenge11.h  Challenge12.h  Challenge13.h  Challenge14.h  Challenge15.h  Challenge16.h  Challenge17.h  Challenge18.h  Challenge19.h  Challenge20.h  Challenge21.h  Challenge22.h  Challenge23.h  Challenge24.h  Challenge25.h  Year2019.h
source/challenges/2020/: Challenge01.h  Challenge02.h  Challenge03.h  Challenge04.h  Challenge05.h  Challenge06.h  Challenge07.h  Challenge08.h  Challenge09.h  Challenge10.h  Challenge11.h  Challenge12.h  Challenge13.h  Challenge14.h  Challenge15.h  Challenge16.h  Challenge17.h  Challenge18.h  Challenge19.h  Challenge20.h  Challenge21.h  Challenge22.h  Challenge23.h  Challenge24.h  Challenge25.h  Year2020.h
source/challenges/2021/: Challenge01.h  Challenge02.h  Challenge03.h  Challenge04.h  Challenge05.h  Challenge06.h  Challenge07.h  Challenge08.h  Challenge09.h  Challenge10.h  Challenge11.h  Challenge12.h  Challenge13.h  Challenge14.h  Challenge15.h  Challenge16.h  Challenge17.h  Challenge18.h  Challenge19.h  Challenge20.h  Challenge21.h  Challenge22.h  Challenge23.h  Challenge24.h  Challenge25.h  Year2021.h
source/challenges/2022/: Challenge01.h  Challenge02.h  Challenge03.h  Challenge05.h  Challenge06.h  Challenge07.h  Challenge08.h  Challenge09.h  Challenge10.h  Challenge12.h  Challenge13.h  Challenge14.h  Challenge15.h  Challenge16.h  Challenge17.h  Challenge18.h  Challenge19.h  Challenge20.h  Year2022.h
source/challenges/2023/: Challenge01.h  Challenge02.h  Challenge03.h  Challenge04.h  Challenge05.h  Challenge06.h  Challenge10.h  Challenge11.h  Challenge12.h  Challenge13.h  Challenge14.h  Challenge15.h  Challenge18.h  Challenge19.h  Year2023.h
source/challenges/Year2018/: Challenge01.h  Challenge02.h  ChallengeFactory.h
source/challenges/Year2021/: Challenge01.h  Challenge02.h  ChallengeFactory.h
source/challenges/Year2022/: Challenge01.h  Challenge02.h  Challenge03.h  Challenge04.h  Challenge05.h  Challenge06.h  Challenge07.h  Challenge08.h  Challenge09.h  Challenge10.h  Challenge11.h  Challenge12.h  Challenge13.h  Challenge14.h  Challenge15.h  Challenge16.h  ChallengeFactory.h
source/challenges/Year2023/: Challenge01.h  Challenge02.h  Challenge03.h  Challenge04.h  Challenge05.h  Challenge06.h  Challenge07.h  Challenge08.h  Challenge09.h  Challenge10.h  Challenge16.h  Challenge18.h  Challenge19.h  ChallengeFactory.h
source/challenges/YearTemplate/: ChallengeFactory.h  ChallengeTemplate.h
source/challenges/templates/: ChallengeTemplate.h  YearTemplate.h
source/tests/: Tests.h  VectorTests.cpp  VectorTests.h
source/tools/: CMakeLists.txt  FileTool.cpp  FileTool.h  GridTool.h  MatrixTool.h  StringTool.h  TestTool.h  TimeTool.cpp  TimeTool.h  VectorTool.h
src/: CMakeLists.txt  Main.cpp
src/challenges/: CMakeLists.txt
src/challenges/challenges/: Challenge.hpp  ChallengeIdentifier.hpp  Factory.cpp  Factory.hpp
src/core/: CMakeLists.txt
src/legacy/Challenges/: ChallengeAbstract.h  ChallengeFactory.h
src/runtime/: CMakeLists.txt
src/runtime/runtime/: Program.cpp  Program.hpp
src/tests/: CMakeLists.txt
src/tests/tests/: Tests_Intcode2019.cpp
(+123 files in other folders)
